exercise 3 with datasource and two model classes